# Goodboi

./: .gitignore  build.sh  run-backend.sh  run-frontend.sh  run.sh  setup.sh
backend/: pyproject.toml  requirements.txt
backend/agents/: feature_request_agent.py  orchestrator.py  prd_writer_agent.py  state.py
backend/api/: server.py
backend/goodboi/: __init__.py  context.py  repo_service.py  server.py
backend/goodboi/agents/: code_review_agent.py  coding_agent.py  feature_request_agent.py  orchestrator.py  prd_writer_agent.py  stage_validator_agent.py  state.py
backend/goodboi/cli/: main.py
backend/goodboi/indexer/: config.py  scanner.py  summarizer.py
backend/goodboi/static/: __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.html  index.html
backend/goodboi/static/_next/static/chunks/: 00kt7y4uhr5.2.js  0b0zn0_np-~z4.js  0bqsn1ry9r6yc.js  0eax.nor9lktn.js  0or-l--tz7qp4.css  0y--akc8dh5eh.js  turbopack-0kuvpu3.zch_2.js
backend/goodboi/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  CodeViewer.tsx  ModelSelector.tsx  PRDViewer.tsx  PlaceholderStage.tsx  QAViewer.tsx  ReviewViewer.tsx  SettingsModal.tsx  Sidebar.tsx  StageTabs.tsx
frontend/src/lib/: api.ts  store.ts  types.ts
